Added the link to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       Coded by Natalie Dambaza and
-      <a href="http://" target="_blank">open sourced on GitHub</a>
+      <a href="https://github.com/Ndambaza/world-clock" target="_blank"
+        >open sourced on GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
