Added basic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <title>World-Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Manchester</option>
+        <option value="">Tokyo</option>
+        <option value="">Honolulu</option>
+      </select>
+
+      <div class="city">
+        <h2>Harare zw</h2>
+        <div class="date">17th July 2024</div>
+        <div class="time">1:10 PM</div>
+      </div>
+
+      <div class="city">
+        <h2>Paris fr</h2>
+        <div class="date">17th July 2024</div>
+        <div class="time">1:10 PM</div>
+      </div>
+    </div>
     <footer>
       Coded by Natalie Dambaza and
       <a href="https://github.com/Ndambaza/world-clock" target="_blank"
