Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
       </select>
 
       <div class="city">
-        <h2>Harare zw</h2>
-        <div class="date">17th July 2024</div>
-        <div class="time">1:10 PM</div>
+        <div>
+          <h2>Harare zw</h2>
+          <div class="date">17th July 2024</div>
+        </div>
+        <div class="time">1:10 <small>PM</small></div>
       </div>
-
       <div class="city">
-        <h2>Paris fr</h2>
-        <div class="date">17th July 2024</div>
-        <div class="time">1:10 PM</div>
+        <div>
+          <h2>Paris fr</h2>
+          <div class="date">17th July 2024</div>
+        </div>
+        <div class="time">1:10 <small>PM</small></div>
       </div>
     </div>
     <footer>
-      Coded by Natalie Dambaza and
+      Coded with ❤️ by <strong>Natalie Dambaza</strong> and
       <a href="https://github.com/Ndambaza/world-clock" target="_blank"
         >open sourced on GitHub</a
       >
