--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World-Clock</title>
   </head>
   <body>
@@ -19,19 +21,19 @@
         <option value="">Honolulu</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="harare">
         <div>
           <h2>Harare zw</h2>
-          <div class="date">17th July 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:10 <small>PM</small></div>
+        <div class="time"><small>PM</small></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris fr</h2>
-          <div class="date">17th July 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:10 <small>PM</small></div>
+        <div class="time"><small>PM</small></div>
       </div>
     </div>
     <footer>
