--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Manchester</option>
-        <option value="">Tokyo</option>
-        <option value="">Honolulu</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Europe/Manchester">Manchester</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
 
-      <div class="city" id="harare">
-        <div>
-          <h2>Harare zw</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="harare">
+          <div>
+            <h2>Harare zw</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>PM</small></div>
         </div>
-        <div class="time"><small>PM</small></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris fr</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris fr</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>PM</small></div>
         </div>
-        <div class="time"><small>PM</small></div>
       </div>
     </div>
     <footer>
