Added another city to the homepage

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
           </div>
           <div class="time"><small>PM</small></div>
         </div>
+
+        <div class="city" id="dubai">
+          <div>
+            <h2>Dubai dbx</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>PM</small></div>
+        </div>
       </div>
     </div>
     <footer>
