--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <div id="cities">
         <div class="city" id="harare">
           <div>
-            <h2>Harare zw</h2>
+            <h2>Harare</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small>PM</small></div>
         </div>
         <div class="city" id="paris">
           <div>
-            <h2>Paris fr</h2>
+            <h2>Paris</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small>PM</small></div>
@@ -40,7 +40,7 @@
 
         <div class="city" id="dubai">
           <div>
-            <h2>Dubai dbx</h2>
+            <h2>Dubai</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small>PM</small></div>
